--- a/google.css
+++ b/google.css
@@ -74,7 +74,7 @@
     background-color: rgba(128, 128, 128, 0.193);
 }
 
-#setting{
+#setting {
     height: 40px;
     width: 37px;
 }
@@ -104,87 +104,84 @@
 }
 
 .dropDownContent {
-    right: -4px;
-    padding: 5px 0px;
-    background-color: white;
     z-index: 1;
     display: none;
     position: absolute;
-    min-width: 200px;
-    /* box-shadow: 8px #e21414dc; */
-    box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
-    text-align: left;
+
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
+    background-color: white;
 }
 
-.dropDownContent a{
+#settingDrop {
+    right: -4px;
+    padding: 5px 0px;
+    min-width: 200px;
+    text-align: left;
+}
+
+.dropDownContent a {
     color: #4d4d4ddc;
     display: block;
     text-decoration: none;
     padding: 6.5px 15px;
     font-size: 1rem;
-    font-family:'Times New Roman', Times, serif;
+    font-family: "Times New Roman", Times, serif;
 }
 
-.dropDownContent a:last-child{
+.dropDownContent a:last-child {
     margin-top: -5px;
 }
 
-.dropDownContent hr{
+.dropDownContent hr {
     color: #4d4d4ddc;
     opacity: 30%;
 }
 
-.dropDownContent a:hover{
+.dropDownContent a:hover {
     background-color: bisque;
 }
 
-.dropMenu
-{
+.dropMenu {
     position: relative;
     display: inline-block;
 }
 
-/* svg {
+button > * {
     pointer-events: none;
-  } */
+}
 
-  button > * {
-    pointer-events: none;
-  }
-
-
-
-
-
-.footNotes
+#optionDrop
 {
+    min-width: 400px;
+    right:-80px;
+}
+
+.footNotes {
     width: 100%;
     /* position: absolute; */
     text-align: center;
-    /* height: 1000px; */
     margin-top: 80px;
-    /* padding-top: 30px; */
     font-size: 30px;
     /* background-color: grey; */
 }
 
-.mail{
+.mail {
     transition: transform 100ms;
     text-decoration: none;
 }
 
-.mail:hover{
+.mail:hover {
     color: coral;
     font-size: 40px;
     /* transform: scale(1.3); */
     /* transition: 10ms; */
 }
 
-.mail:link{
+.mail:link {
     color: aqua;
 }
 
-.mail:visited{
+.mail:visited {
     color: rgb(255, 0, 64);
 }
